# swarm_provenance_mcp

./: .env.example  CLAUDE.md  MCP_usage_ecosystem.md  README.md  TESTING.md  claude_desktop_config.json  pyproject.toml  run_regression_tests.py  test_mcp_connection.py  test_tool_validation.py
.github/workflows/: regression_tests.yml
swarm_provenance_mcp/: __init__.py  config.py  gateway_client.py  provenance_schemas.py  server.py
swarm_provenance_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_end_to_end_workflow.py  test_gateway_client.py  test_integration.py  test_integration_smoke.py  test_performance_regression.py  test_schema_compliance.py  test_security_safety.py  test_tool_definitions.py  test_tool_execution.py  test_tool_sync_validation.py
